Modulo de Productos completado se usa ABB para buscar por producto

--- a/src/Vista/AddUser.form
+++ b/src/Vista/AddUser.form
@@ -118,9 +118,9 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="txtNombre" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel10" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="cbxRol" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="cbxRol" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="40" max="32767" attributes="0"/>
                       <Component id="btnIniciar" min="-2" pref="33" max="-2" attributes="0"/>
